--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>jackson-syntax-highlight</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>jackson-syntax-highlight</name>
-	<description>ANSI syntax highlighting output for Jackson</description>
+	<description>ANSI syntax highlighting for Jackson output</description>
 	<url>https://github.com/skjolber/jackson-syntax-highlight</url>
 
 	<organization>
