--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,30 +1,16 @@
+name: Java CI
 
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
-
-on:
-  push:
-    branches: [ '**' ]
-
+on: [push]
 jobs:
-  build-with-maven-cache-github-action:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: 11
-        distribution: 'temurin'
-    - name: Restore cache
-      uses: skjolber/maven-cache-github-action@v1
-      with:
-        step: restore
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Save cache
-      uses: skjolber/maven-cache-github-action@v1
-      with:
-        step: save
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
